Main page is typeseted

--- a/404/index.html
+++ b/404/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
-    <meta property="og:url" content="https://ipo.mycapitalland.ru/404/"/>
+    <meta property="og:url" content="https://sochi.mycapitalland.ru/404/"/>
     <meta property="og:title" content="Упс... Что-то не так!"/>
     <meta property="og:description" content="Похоже, страницы с указанным адресом не существует или Вы ввели неверный адрес"/>
     <title>Упс... Что-то не так! Похоже, страницы с указанным адресом не существует или Вы ввели неверный адрес</title>
