--- a/confirmed/index.html
+++ b/confirmed/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
-    <meta property="og:url" content="https://ipo.mycapitalland.ru/confirmed/"/>
+    <meta property="og:url" content="https://sochi.mycapitalland.ru/confirmed/"/>
     <meta property="og:title" content="Ваш почтовый адрес успешно подтверждён!"/>
     <meta property="og:description" content="Присоединяйтесь к закрытой группе в Telegram!"/>
     <title>Ваш почтовый адрес успешно подтверждён! Присоединяйтесь к закрытой группе в Telegram!</title>
@@ -54,7 +54,7 @@
           </header>
           <div class="container">
             <h1 class="main-title">Ваш почтовый адрес успешно подтверждён!</h1>
-            <p class="main-text">Ещё раз благодарим за регистрацию на онлайн-лекцию <span>«IPO – мощный инструмент для приумножения капитала»</span></p>
+            <p class="main-text">Ещё раз благодарим за регистрацию на онлайн-встречу <span>«Инвестиции в недвижимость Сочи»</span></p>
             <h2 class="main-subtitle">Чтобы не пропустить всю важную информацию, переходите в наш Telegram-бот, если Вы этого ещё не сделали!</h2>
             <h3 class="main-subtitle-2">Для чего?</h3>
             <div class="main-list">
@@ -62,19 +62,19 @@
                 <div class="col-md-4">
                   <div class="main-list-item main-list-item-1">
                     <div class="main-list-item-icon main-list-item-icon-1"></div>
-                    <p class="main-list-item-text">Готовиться к лекции вместе с нами</p>
+                    <p class="main-list-item-text">Готовиться к встрече вместе с нами</p>
                   </div>
                 </div>
                 <div class="col-md-4">
                   <div class="main-list-item main-list-item-2">
                     <div class="main-list-item-icon main-list-item-icon-2"></div>
-                    <p class="main-list-item-text">Узнать больше о рынке первичных акций</p>
+                    <p class="main-list-item-text">Узнать больше о доходной недвижимости</p>
                   </div>
                 </div>
                 <div class="col-md-4">
                   <div class="main-list-item main-list-item-3">
                     <div class="main-list-item-icon main-list-item-icon-3"></div>
-                    <p class="main-list-item-text">Наблюдать, сколько наши инвесторы зарабатывают за неделю</p>
+                    <p class="main-list-item-text">Наблюдать, сколько наши инвесторы заработали в предыдущих проектах</p>
                   </div>
                 </div>
               </div>
