--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
     <meta name="facebook-domain-verification" content="vv0adq14xl3thllrrw8ifhqlbi7lf1"/>
-    <meta property="og:url" content="https://ipo.mycapitalland.ru/"/>
+    <meta property="og:url" content="https://sochi.mycapitalland.ru/"/>
     <meta property="og:title" content="«IPO – мощный инструмент для приумножения капитала»"/>
     <meta property="og:description" content="Узнайте, как обрести финансовую свободу и не зависеть от зарплаты, начальника и кризиса"/>
     <title>«IPO – мощный инструмент для приумножения капитала» Узнайте, как обрести финансовую свободу и не зависеть от зарплаты, начальника и кризиса</title>
@@ -55,20 +55,21 @@
         <div class="container">
           <div class="row">
             <div class="col-md-6">
-              <p class="main-pre">Приглашаем  Вас на онлайн-встречу</p>
-              <h1 class="main-title">«IPO – мощный инструмент <br/>для <span>приумножения капитала»</span></h1>
-              <h2 class="main-subtitle">Узнайте, как обрести финансовую свободу <br/>и не зависеть от зарплаты, начальника и кризиса</h2>
+              <p class="main-pre">Приглашаем Вас на онлайн-встречу</p>
+              <h1 class="main-title">Инвестиции <br/><span>в недвижимость Сочи</span></h1>
+              <h2 class="main-subtitle">Цены за 1 кв.м. растут, как на дрожжах!</h2>
               <div class="main-info">
-                <p class="main-info-text">Дата и время проведения: <span>13 мая, в 19:00(Мск)</span></p>
+                <p class="main-info-text">Дата и время проведения: <span>20 мая, в 19:00(Мск)</span></p>
                 <p class="main-info-text">Ведущий: <span>Юрий Медушенко</span></p>
               </div>
             </div>
             <div class="col-md-6">
               <div class="video-wrapper video-wrapper-main">
-                <iframe src="https://www.youtube.com/embed/J0HeJYgnhaU?autoplay=1&mute=1&modestbranding=1" allowfullscreen="allowfullscreen"></iframe>
+                <iframe src="https://www.youtube.com/embed/?autoplay=1&mute=1&modestbranding=1" allowfullscreen="allowfullscreen"></iframe>
               </div>
             </div>
           </div>
+          <h3 class="main-aftertitle">Успейте заработать на этом!</h3>
         </div>
       </section>
       <section class="form-section">
@@ -105,76 +106,100 @@
           </div>
         </div>
       </section>
-      <section id="about">
+      <section id="why">
         <div class="container">
-          <h3 class="general-title general-title-white general-title-about">IPO – ТРЕНД 2021 года ДЛЯ ТЕХ, КТО ЗНАЕТ, <br/>КАК РАСПОРЯЖАТЬСЯ ДЕНЬГАМИ</h3>
+          <h3 class="general-title general-title-center">Мыслите шире – зарабатывайте больше!<small>Почему инвестировать в Сочи нужно именно сейчас</small></h3>
           <div class="row">
-            <div class="col-md-6"><img class="about-img" src="../img/images/logo-about.png" alt="Логотип"/>
-            </div>
-            <div class="col-md-6">
-              <div class="general-wrapper general-wrapper-about">
-                <h5 class="general-wrapper-title">Преимущества инвестиций в IPO</h5>
-                <ul class="about-wrapper-list">
-                  <li>Это альтернатива банковским вкладам, которые <br/>не покрывают даже уровень инфляции</li>
-                  <li>Доходность в 2-3 раза выше, чем у других инвестиционных инструментов</li>
-                  <li>Вложив деньги один раз, вам не придётся постоянно думать, что с ними делать дальше</li>
-                </ul>
+                  <div class="col-md-4">
+                    <div class="why-item why-item-1">
+                      <div class="why-item-icon why-item-icon-1"></div>
+                      <p class="why-item-text">Развитие инфраструктуры Краснодарского края – тренд последних лет!</p>
+                    </div>
+                  </div>
+                  <div class="col-md-4">
+                    <div class="why-item why-item-2">
+                      <div class="why-item-icon why-item-icon-2"></div>
+                      <p class="why-item-text">Сочи – регион №1 по темпам роста цен на землю и объекты недвижимости</p>
+                    </div>
+                  </div>
+                  <div class="col-md-4">
+                    <div class="why-item why-item-3">
+                      <div class="why-item-icon why-item-icon-3"></div>
+                      <p class="why-item-text">В Сочи полным ходом идёт строительство инновационного центра «Сириус», общей площадью 81,1 га, с огромной инфраструктурой</p>
+                    </div>
+                  </div>
+          </div>
+          <div class="row">
+                  <div class="col-md-4">
+                    <div class="why-item why-item-4">
+                      <div class="why-item-icon why-item-icon-4"></div>
+                      <p class="why-item-text">На 30% вырос спрос на жилую недвижимость в Сочи с начала 2021 года (по сравнению с таким же периодом 2020 года)</p>
+                    </div>
+                  </div>
+                  <div class="col-md-4">
+                    <div class="why-item why-item-5">
+                      <div class="why-item-icon why-item-icon-5"></div>
+                      <p class="why-item-text">137 % – средний показатель роста цены за 1 кв.м. в одном из ЖК ИНТЦ “Сириус” за 1,5 года – с 111,4 до 263 тыс. руб.</p>
+                    </div>
+                  </div>
+                  <div class="col-md-4">
+                    <div class="why-item why-item-6">
+                      <div class="why-item-icon why-item-icon-6"></div>
+                      <p class="why-item-text">Эксперты прогнозируют в 2021 году рост цен на уровне 2530%</p>
+                    </div>
+                  </div>
+          </div>
+          <h4 class="why-after-title">Узнайте подробности у нашего эксперта во время вебинара!</h4>
+          <div class="button-wrapper"><a class="button" href="#Modal">ЗАРЕГИСТРИРОВАТЬСЯ НА ОНЛАЙН-ВСТРЕЧУ</a></div>
+        </div>
+      </section>
+      <section id="plan">
+        <div class="container">
+          <div class="rect rect-plan"></div>
+          <div class="content">
+            <h3 class="general-title"><span>Программа онлайн-встречи</span></h3>
+            <div class="row">
+              <div class="col-md-7">
+                <div class="general-wrapper">
+                  <ul class="plan-list">
+                    <li>Почему Сочи называют надеждой России?</li>
+                    <li>ИНТЦ “Сириус” – объект 2021 года</li>
+                    <li>Космические цены: 400 тыс.руб. за 1 кв.м. – это не предел</li>
+                    <li>Доходный объект в Красной Поляне – наш новый проект</li>
+                    <li>Купить – реализовать – заработать: наша инвестиционная стратегия</li>
+                    <li>Короткий путь от инвестора-новичка до миллионера: сколько можно заработать на 1 кв.м. в Сочи</li>
+                  </ul>
+                  <div class="button-wrapper"><a class="button" href="#Modal">ХОЧУ ПОСЕТИТЬ ОНЛАЙН-ВСТРЕЧУ!</a></div>
+                  <p class="plan-text">Покупка жилья в Сочи – не мечта, а прибыльный бизнес, открывающий новые горизонты качества жизни!</p>
+                </div>
+              </div>
+              <div class="col-md-5">
+                <div class="general-img general-img-plan"><img src="../img/images/laptop.png" alt="Лаптоп"/>
+                </div>
               </div>
             </div>
           </div>
+        </div>
+      </section>
+      <section id="author">
+        <div class="container">
+          <h3 class="general-title general-title-author">Ведущий онлайн-встречи</h3>
+          <h4 class="author-subtitle">Юрий Медушенко</h4>
           <div class="row">
             <div class="col-md-5 col-md-push-7">
-              <div class="general-img general-img-about"><img src="../img/images/about.jpg" alt="Картинка блока"/>
+              <div class="general-img general-img-author"><img src="../img/images/yuriy.jpg" alt="Юрий Медушенко"/>
               </div>
             </div>
             <div class="col-md-7 col-md-pull-5">
-              <div class="rect rect-about"></div>
-              <div class="general-wrapper">
-                <h5 class="general-wrapper-title">На онлайн-встрече Вы узнаете:</h5>
+              <div class="rect rect-author"></div>
+              <div class="author-container">
                 <ul class="general-list">
-                  <li>- Что такое рынок IPO и чем он отличается от биржи акций;</li>
-                  <li>- Преимущества рынка IPO;</li>
-                  <li>- Почему невыгодно инвестировать в IPO самостоятельно;</li>
-                  <li>- Сколько зарабатывают на IPO в месяц наши инвесторы;</li>
-                  <li>- Какую максимальную  и минимальную доходность можно получить на IPO;</li>
-                  <li>- Существуют ли риски потери капитала и как мы их обходим;</li>
-                  <li>- Наш опыт участия на рынке IPO (кейсы и реальный опыт)</li>
+                  <li>- Соучредитель Клуба Инвесторов My Capital Club</li>
+                  <li>- Инвестор с успешным опытом реализации инвестиционных проектов на сумму более 1,8 млрд. рублей</li>
+                  <li>- Эксперт №1 в сфере доходных домов России</li>
+                  <li>- Серийный предприниматель</li>
                 </ul>
               </div>
-            </div>
-          </div>
-        </div>
-      </section>
-      <section id="modal-line">
-        <div class="container">
-          <div class="row">
-            <div class="col-md-8">
-              <h3 class="modal-line-title">IPO входит в ТОП-8 самых надёжных способов увеличения капитала</h3>
-            </div>
-            <div class="col-md-4">
-              <div class="button-wrapper button-wrapper-modal-line"><a class="button button-up" href="#Modal">ХОЧУ ПОСЕТИТЬ ВСТРЕЧУ</a></div>
-            </div>
-          </div>
-        </div>
-      </section>
-      <section id="results">
-        <div class="container">
-          <h3 class="general-title general-title-results"><span>Наши результаты на рынке IPO</span></h3>
-          <h4 class="results-subtitle">В 2020 году мы совершили 50 положительных сделок<br/>с доходностью более 100%</h4>
-          <h5 class="results-subtitle-2">Наша лучшая сделка</h5>
-          <div class="row">
-            <div class="col-md-6">
-              <div class="results-container"><img class="results-container-img" src="../img/images/results-1.png" alt="Beyond Meat"/>
-                <h6 class="results-container-title">Компания Beyond Meat <small>(производство искусственного мяса)</small></h6>
-                <ul class="general-list">
-                  <li>- Покупка 1 января 2019 года – $25 за акцию.</li>
-                  <li>- 17 июня 2019 года – рост более 500% до $167.</li>
-                  <li>Рост цены на эти акции продолжается до сих пор по 10% в день</li>
-                </ul>
-              </div>
-            </div>
-            <div class="col-md-6">
-              <div class="rect rect-results"></div><img class="results-img" src="../img/images/results-2.jpg" alt="График"/>
             </div>
           </div>
         </div>
@@ -213,57 +238,11 @@
           </div>
         </div>
       </section>
-      <section id="author">
-        <div class="container">
-          <h3 class="general-title general-title-author">Ведущий онлайн-встречи</h3>
-          <h4 class="author-subtitle">Юрий Медушенко</h4>
-          <div class="row">
-            <div class="col-md-5 col-md-push-7">
-              <div class="general-img general-img-author"><img src="../img/images/yuriy.jpg" alt="Юрий Медушенко"/>
-              </div>
-            </div>
-            <div class="col-md-7 col-md-pull-5">
-              <div class="rect rect-author"></div>
-              <div class="author-container">
-                <ul class="general-list">
-                  <li>- Соучредитель Клуба Инвесторов My Capital Club</li>
-                  <li>- Инвестор с успешным опытом реализации инвестиционных проектов на сумму более 1,8 млрд. рублей</li>
-                  <li>- Эксперт №1 в сфере доходных домов России</li>
-                  <li>- Серийный предприниматель</li>
-                </ul>
-              </div>
-            </div>
-          </div>
-          <form class="form form-author" action="https://mycapital.autoweboffice.ru/?r=personal/newsletter/sub/add&amp;id=28323&amp;lg=ru&amp;Contact[id_newsletter]=34" method="post" enctype="application/x-www-form-urlencoded" accept-charset="UTF-8" target="_blank">
-            <h3 class="form-title form-title-author">Спешите записаться</h3>
-            <div class="email-block email-block-form">
-              <input type="hidden" value="1" name="required_fields[email]"/>
-              <input class="input input-mail input-mail-author" name="Contact[email]" type="text" placeholder="E-mail"/>
-            </div>
-            <button class="button button-form button-form-author" type="submit">Записаться</button>
-            <div class="clearfix"></div>
-            <p class="alert-message"></p>
-            <div class="checking checking-author">
-              <input class="check" type="checkbox" id="check-3"/>
-              <label class="check-label" for="check-3">Я согласен с <a href="politics.pdf" target="_blank">условиями обработки</a> персональных данных по 152 - Ф3</label>
-            </div>
-            <div style="display: none;">
-              <div id="formTypeSpecificVars-3" style="display: none;">
-                <input type="hidden" value="34" id="form_newsletter_id_newsletter_3" name="Contact[id_newsletter]"/>
-              </div><!-- API код канала рекламы -->
-              <input type="hidden" value="0" id="form_newsletter_id_advertising_channel_page_3" name="Contact[id_advertising_channel_page]"/>
-              <input type="hidden" name="formId" value="26"/>
-              <input type="hidden" name="formVc" value="2750525908"/>
-              <input type="hidden" name="_aid" value=""/>
-              <input type="hidden" name="_vcaid" value=""/>
-            </div>
-          </form>
-        </div>
-      </section>
       <section id="last">
         <div class="container">
+          <h3 class="last-title">Выигрывайте на ажиотажном спросе <br/>на объекты недвижимости в Сочи!</h3>
           <div class="footer">
-            <h5 class="footer-title">ПОДПИСЫВАЙТЕСЬ НА НОВОСТИ, ЧТОБЫ ВСЕГДА БЫТЬ В КУРСЕ САМЫХ ЛУЧШИХ ПРЕДЛОЖЕНИЙ <br/>ПО ИНВЕСТИРОВАНИЮ!</h5>
+            <h5 class="footer-title">ПОДПИСЫВАЙТЕСЬ НА НОВОСТИ, ЧТОБЫ ВСЕГДА БЫТЬ В КУРСЕ САМЫХ ЛУЧШИХ ПРЕДЛОЖЕНИЙ ПО ИНВЕСТИРОВАНИЮ!</h5>
             <div class="soc-links">
               
               <a class="soc-link soc-link-vk" href="https://vk.com/mycapital_ru" target="_blank"></a>
@@ -272,7 +251,6 @@
               <a class="soc-link soc-link-tg" href="https://mycapital.autoweboffice.ru/index.php?r=form/telegram&id_bot=4" target="_blank"></a>
               <a class="soc-link soc-link-fb" href="https://facebook.com/MyCapitalRu/" target="_blank"></a>
             </div>
-            <h6 class="footer-subtitle">Узнайте, как зарабатывать до 30% в долларах ЗА год <br/>и не переживать о будущем!</h6>
             <p class="footer-text">Контакты: ООО «Зона Комфорта», ИНН 5029196740, ОГРН 1155029003293</p>
             <p class="footer-text">Телефон: <a href="tel:+74950230110" target="_blank">+7 (495) 023-01-10</a></p>
             <p class="footer-text">E-mail: <a href="mailto:info@mycapital.fund" target="_blank">info@mycapital.fund</a></p>
