Main page is stylezed

--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
     <meta name="facebook-domain-verification" content="vv0adq14xl3thllrrw8ifhqlbi7lf1"/>
     <meta property="og:url" content="https://sochi.mycapitalland.ru/"/>
-    <meta property="og:title" content="«IPO – мощный инструмент для приумножения капитала»"/>
-    <meta property="og:description" content="Узнайте, как обрести финансовую свободу и не зависеть от зарплаты, начальника и кризиса"/>
-    <title>«IPO – мощный инструмент для приумножения капитала» Узнайте, как обрести финансовую свободу и не зависеть от зарплаты, начальника и кризиса</title>
-    <link rel="apple-touch-icon" href="../favicon.svg"/>
-    <link rel="apple-touch-icon" sizes="76x76" href="../favicon.svg"/>
-    <link rel="apple-touch-icon" sizes="120x120" href="../favicon.svg"/>
-    <link rel="apple-touch-icon" sizes="152x152" href="../favicon.svg"/>
-    <link rel="icon" type="image/x-icon" href="../favicon.ico"/>
-    <link rel="shortcut icon" type="image/x-icon" href="../favicon.png"/>
-    <link rel="stylesheet" href="../css/styles.min.css"/>
+    <meta property="og:title" content="«Ивестиции в недвижимость Сочи»"/>
+    <meta property="og:description" content="Онлайн-встреча с Юрием Медушенко"/>
+    <title>«Ивестиции в недвижимость Сочи» Онлайн-встреча с Юрием Медушенко</title>
+    <link rel="apple-touch-icon" href="favicon.svg"/>
+    <link rel="apple-touch-icon" sizes="76x76" href="favicon.svg"/>
+    <link rel="apple-touch-icon" sizes="120x120" href="favicon.svg"/>
+    <link rel="apple-touch-icon" sizes="152x152" href="favicon.svg"/>
+    <link rel="icon" type="image/x-icon" href="favicon.ico"/>
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.png"/>
+    <link rel="stylesheet" href="css/styles.min.css"/>
     <!-- Google Tag Manager -->
     <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src='https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);})(window,document,'script','dataLayer','GTM-NQFH5LF');</script> 
     <!-- End Google Tag Manager -->
@@ -29,11 +29,11 @@
       <section id="main">
         <header class="header-light">
           <div class="container">
-            <div class="logo"><a class="logo-link" href="https://mycapitalland.ru/"><img class="logo-link-img" src="../img/images/logo.png" alt="Логотип"/></a>
+            <div class="logo"><a class="logo-link" href="https://mycapitalland.ru/"><img class="logo-link-img" src="img/images/logo.png" alt="Логотип"/></a>
               <p class="logo-text">Инвестиционный холдинг <br/>«Мой капитал»</p>
             </div>
             <div class="header-nav">
-              <div class="logo logo-mobile"><a class="logo-link" href="https://mycapitalland.ru/"><img class="logo-link-img" src="../img/images/logo.png" alt="Логотип"/></a>
+              <div class="logo logo-mobile"><a class="logo-link" href="https://mycapitalland.ru/"><img class="logo-link-img" src="img/images/logo.png" alt="Логотип"/></a>
                 <p class="logo-text">Инвестиционный холдинг <br/>«Мой капитал»</p>
               </div>
               <div class="contacts">
@@ -87,7 +87,7 @@
                 <button class="button button-form button-form-section" type="submit">Записаться</button>
                 <div class="clearfix"></div>
                 <p class="alert-message"></p>
-                <div class="checking checking-form">
+                <div class="checking checking-form checking-main">
                   <input class="check" type="checkbox" id="check-1"/>
                   <label class="check-label" for="check-1">Я согласен с <a href="politics.pdf" target="_blank">условиями обработки</a> персональных данных по 152 - Ф3</label>
                 </div>
@@ -108,7 +108,7 @@
       </section>
       <section id="why">
         <div class="container">
-          <h3 class="general-title general-title-center">Мыслите шире – зарабатывайте больше!<small>Почему инвестировать в Сочи нужно именно сейчас</small></h3>
+          <h3 class="general-title general-title-why">Мыслите шире – зарабатывайте больше!<small>Почему инвестировать в Сочи нужно именно сейчас</small></h3>
           <div class="row">
                   <div class="col-md-4">
                     <div class="why-item why-item-1">
@@ -149,15 +149,15 @@
                     </div>
                   </div>
           </div>
-          <h4 class="why-after-title">Узнайте подробности у нашего эксперта во время вебинара!</h4>
-          <div class="button-wrapper"><a class="button" href="#Modal">ЗАРЕГИСТРИРОВАТЬСЯ НА ОНЛАЙН-ВСТРЕЧУ</a></div>
+          <h4 class="why-aftertitle">Узнайте подробности у нашего эксперта во время вебинара!</h4>
+          <div class="button-wrapper button-wrapper-center"><a class="button button-up" href="#Modal">ЗАРЕГИСТРИРОВАТЬСЯ НА ОНЛАЙН-ВСТРЕЧУ</a></div>
         </div>
       </section>
       <section id="plan">
         <div class="container">
           <div class="rect rect-plan"></div>
           <div class="content">
-            <h3 class="general-title"><span>Программа онлайн-встречи</span></h3>
+            <h3 class="general-title general-title-left"><span>Программа онлайн-встречи</span></h3>
             <div class="row">
               <div class="col-md-7">
                 <div class="general-wrapper">
@@ -169,12 +169,12 @@
                     <li>Купить – реализовать – заработать: наша инвестиционная стратегия</li>
                     <li>Короткий путь от инвестора-новичка до миллионера: сколько можно заработать на 1 кв.м. в Сочи</li>
                   </ul>
-                  <div class="button-wrapper"><a class="button" href="#Modal">ХОЧУ ПОСЕТИТЬ ОНЛАЙН-ВСТРЕЧУ!</a></div>
-                  <p class="plan-text">Покупка жилья в Сочи – не мечта, а прибыльный бизнес, открывающий новые горизонты качества жизни!</p>
+                  <div class="button-wrapper"><a class="button button-up" href="#Modal">ХОЧУ ПОСЕТИТЬ ОНЛАЙН-ВСТРЕЧУ!</a></div>
+                  <p class="plan-text">Покупка жилья в Сочи – не мечта, <br/>а прибыльный бизнес, открывающий новые горизонты качества жизни!</p>
                 </div>
               </div>
               <div class="col-md-5">
-                <div class="general-img general-img-plan"><img src="../img/images/laptop.png" alt="Лаптоп"/>
+                <div class="general-img general-img-plan"><img src="img/images/laptop.png" alt="Лаптоп"/>
                 </div>
               </div>
             </div>
@@ -183,11 +183,10 @@
       </section>
       <section id="author">
         <div class="container">
-          <h3 class="general-title general-title-author">Ведущий онлайн-встречи</h3>
-          <h4 class="author-subtitle">Юрий Медушенко</h4>
+          <h3 class="general-title general-title-left general-title-author">Ведущий онлайн-встречи - Юрий Медушенко</h3>
           <div class="row">
             <div class="col-md-5 col-md-push-7">
-              <div class="general-img general-img-author"><img src="../img/images/yuriy.jpg" alt="Юрий Медушенко"/>
+              <div class="general-img general-img-author"><img src="img/images/yuriy.png" alt="Юрий Медушенко"/>
               </div>
             </div>
             <div class="col-md-7 col-md-pull-5">
@@ -251,7 +250,8 @@
               <a class="soc-link soc-link-tg" href="https://mycapital.autoweboffice.ru/index.php?r=form/telegram&id_bot=4" target="_blank"></a>
               <a class="soc-link soc-link-fb" href="https://facebook.com/MyCapitalRu/" target="_blank"></a>
             </div>
-            <p class="footer-text">Контакты: ООО «Зона Комфорта», ИНН 5029196740, ОГРН 1155029003293</p>
+            <p class="footer-text">ООО «Зона Комфорта»,</p>
+            <p class="footer-text">ИНН 5029196740, ОГРН 1155029003293</p>
             <p class="footer-text">Телефон: <a href="tel:+74950230110" target="_blank">+7 (495) 023-01-10</a></p>
             <p class="footer-text">E-mail: <a href="mailto:info@mycapital.fund" target="_blank">info@mycapital.fund</a></p>
             <p class="footer-text"> <a href="politics.pdf" target="_blank">Политика конфиденциальности</a></p>
@@ -286,7 +286,7 @@
         </div>
       </form>
     </div>
-    <script src="../js/libs.min.js"></script>
-    <script src="../js/scripts.js"></script>
+    <script src="js/libs.min.js"></script>
+    <script src="js/scripts.js"></script>
   </body>
 </html>
