--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
               </div>
               <div class="contacts">
                 <div class="contact contact-tg">
-                  <p class="contact-text">Присоединяйтесь</p><a class="contact-link" href="https://mycapital.autoweboffice.ru/index.php?r=form/telegram&amp;id_bot=4" target="_blank">Telegram-канал</a>
+                  <p class="contact-text">Присоединяйтесь</p><a class="contact-link" href="http://t.me/mycapitalbot" target="_blank">Telegram-канал</a>
                 </div>
                 <div class="contact contact-phone">
                   <p class="contact-text">Позвонить нам</p><a class="contact-link" href="callto:88007009598" target="_blank">8 800 700 9598</a>
@@ -247,7 +247,7 @@
               <a class="soc-link soc-link-vk" href="https://vk.com/mycapital_ru" target="_blank"></a>
               <a class="soc-link soc-link-yt" href="https://www.youtube.com/channel/UCeQu4s1IZ6c-w-K8q15wF1w" target="_blank"></a>
               <a class="soc-link soc-link-insta" href="https://www.instagram.com/mycapital.ru/" target="_blank"></a>
-              <a class="soc-link soc-link-tg" href="https://mycapital.autoweboffice.ru/index.php?r=form/telegram&id_bot=4" target="_blank"></a>
+              <a class="soc-link soc-link-tg" href="http://t.me/mycapitalbot" target="_blank"></a>
               <a class="soc-link soc-link-fb" href="https://facebook.com/MyCapitalRu/" target="_blank"></a>
             </div>
             <p class="footer-text">ООО «Зона Комфорта»,</p>
