--- a/thanks/index.html
+++ b/thanks/index.html
@@ -37,7 +37,7 @@
               </div>
               <div class="contacts">
                 <div class="contact contact-tg">
-                  <p class="contact-text">Присоединяйтесь</p><a class="contact-link" href="https://mycapital.autoweboffice.ru/index.php?r=form/telegram&amp;id_bot=4" target="_blank">Telegram-канал</a>
+                  <p class="contact-text">Присоединяйтесь</p><a class="contact-link" href="http://t.me/mycapitalbot" target="_blank">Telegram-канал</a>
                 </div>
                 <div class="contact contact-phone">
                   <p class="contact-text">Позвонить нам</p><a class="contact-link" href="callto:88007009598" target="_blank">8 800 700 9598</a>
