--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                   <div class="col-md-4">
                     <div class="why-item why-item-2">
                       <div class="why-item-icon why-item-icon-2"></div>
-                      <p class="why-item-text">Сочи – регион №1 по темпам роста цен на землю и объекты недвижимости</p>
+                      <p class="why-item-text">Сочи – регион №1 по темпам роста цен на землю <br>и объекты недвижимости</p>
                     </div>
                   </div>
                   <div class="col-md-4">
@@ -133,7 +133,7 @@
                   <div class="col-md-4">
                     <div class="why-item why-item-4">
                       <div class="why-item-icon why-item-icon-4"></div>
-                      <p class="why-item-text">На 30% вырос спрос на жилую недвижимость в Сочи с начала 2021 года (по сравнению с таким же периодом 2020 года)</p>
+                      <p class="why-item-text">На 30% вырос спрос <br>на жилую недвижимость <br>в Сочи с начала 2021 года <br>(по сравнению с таким же периодом 2020 года)</p>
                     </div>
                   </div>
                   <div class="col-md-4">
@@ -145,7 +145,7 @@
                   <div class="col-md-4">
                     <div class="why-item why-item-6">
                       <div class="why-item-icon why-item-icon-6"></div>
-                      <p class="why-item-text">Эксперты прогнозируют в 2021 году рост цен на уровне 2530%</p>
+                      <p class="why-item-text">Эксперты прогнозируют <br>в 2021 году рост цен <br>на уровне 2530%</p>
                     </div>
                   </div>
           </div>
@@ -193,7 +193,7 @@
               <div class="rect rect-author"></div>
               <div class="author-container">
                 <ul class="general-list">
-                  <li>- Соучредитель Клуба Инвесторов My Capital Club</li>
+                  <li>- Соучредитель Клуба Инвесторов "Мой капитал"</li>
                   <li>- Инвестор с успешным опытом реализации инвестиционных проектов на сумму более 1,8 млрд. рублей</li>
                   <li>- Эксперт №1 в сфере доходных домов России</li>
                   <li>- Серийный предприниматель</li>
@@ -241,7 +241,7 @@
         <div class="container">
           <h3 class="last-title">Выигрывайте на ажиотажном спросе <br/>на объекты недвижимости в Сочи!</h3>
           <div class="footer">
-            <h5 class="footer-title">ПОДПИСЫВАЙТЕСЬ НА НОВОСТИ, ЧТОБЫ ВСЕГДА БЫТЬ В КУРСЕ САМЫХ ЛУЧШИХ ПРЕДЛОЖЕНИЙ ПО ИНВЕСТИРОВАНИЮ!</h5>
+            <h5 class="footer-title">ПОДПИСЫВАЙТЕСЬ НА НОВОСТИ, ЧТОБЫ ВСЕГДА БЫТЬ В КУРСЕ <br/>САМЫХ ЛУЧШИХ ПРЕДЛОЖЕНИЙ ПО ИНВЕСТИРОВАНИЮ!</h5>
             <div class="soc-links">
               
               <a class="soc-link soc-link-vk" href="https://vk.com/mycapital_ru" target="_blank"></a>
